...
    <string name="cancel">Cancel</string>
    <string name="changelog">View full change log</string>
    <string name="choose_entity">Choose entity</string>
    <string name="clear_favorites">Clear favorites</string>
    <string name="clear_allowed_tags">Clear approved tags</string>
    <string name="clear_allowed_tags_complete">Tags cleared</string>
    <string name="clear_search">Clear search</string>
    <string name="clear_webview_cache">Reset frontend cache</string>
    <string name="clear_webview_cache_active">Resetting…</string>
    <string name="clear_webview_cache_failed">Reset failed</string>
    <string name="clear_webview_cache_success">Reset completed</string>
    <string name="close">Close</string>
    <string name="color_temp">Color temperature: %1$s</string>
...
    <plurals name="n_entities">
        <item quantity="one">1 entity</item>
        <item quantity="other">%d entities</item>
    </plurals>
    <string name="entity_attribute_checkbox">Append attribute value</string>
    <string name="entity_id_name">Entity ID: %1$s</string>
    <string name="entity_picker_add_entity">Add entity</string>
    <string name="entity_widget_desc">View any entity\'s current state and toggle it</string>
    <string name="todo_widget_desc">View any configured to-do list and mark items as completed</string>
    <string name="error_auth_revoked">It appears that your authorization was revoked, please reconnect to Alten.</string>
    <string name="error_connection_failed">Unable to connect to Alten.</string>
    <string name="error_connection_failed_to">Unable to connect to %1$s</string>
    <string name="error_connection_failed_no_network">Network unavailable, please check your connection</string>
...
    <string name="required_fields">requires a username and password.</string>
    <string name="resets_at">Resets at</string>
    <string name="retry">Retry</string>
    <string name="save">Save</string>
    <string name="scenes">Scenes</string>
    <string name="scripts">Scripts</string>
    <string name="search">Search</string>
    <string name="search_clear_selection">Clear selection</string>
    <string name="search_icons">Search icons</string>
    <string name="search_icons_in_english">Search icons (in English)</string>
    <string name="search_notifications">Search notifications</string>
    <string name="search_refine_for_more">Refine your search to view more…</string>
    <string name="search_results">Search results</string>
    <string name="search_sensors">Search sensors</string>
...
    <string name="connection_check_error_tls">TLS certificate error</string>
    <string name="connection_check_error_server">Server connection failed</string>
    <string name="connection_check_skipped">Skipped (previous check failed)</string>
    <string name="connection_check_home_assistant">Alten verification</string>
    <string name="connection_check_home_assistant_success">Verified as Alten</string>
    <string name="connection_check_error_not_home_assistant">Server is not Alten</string>
    <string name="entity_picker_no_entity_found">No entity found</string>
    <string name="entity_picker_no_entity_found_for">No entity found for %s</string>
    <string name="fail_to_navigate_to_uri">No app available to open %s</string>
    <string name="experimental">Experimental</string>
    <string name="learn_more">Learn more</string>
    <string name="wireguard_pick_config">Pick Tunnel Config</string>
    <string name="wireguard_change_config">Change Tunnel Config</string>
    <string name="wireguard_valid_config">Valid config: %1$s</string>
...
